Fix mount list styling overflow.

--- a/src/styles/CharacterMounts.scss
+++ b/src/styles/CharacterMounts.scss
@@ -20,7 +20,7 @@
 	}
 
 	ul {
-		height: calc(100% - 25px);
+		height: calc(100% - 45px);
 		overflow-y: auto;
 	}
 }
